response validator (#370)